# defencewest-site

./: .gitignore  .lycheeignore  .pa11yci.json  ACCESSIBILITY.md  AGENTS.md  CONTRIBUTING.md  ISSUES.md  README.md  astro.config.mjs  hugo.toml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  submission.json
.github/ISSUE_TEMPLATE/: submission.md
.github/workflows/: ci.yml  import-submission.yml  process-submission.yml
content/: _index.md  contact.md  submit.md
content/company/: 4z.md  Centurion Transport  Epigroup.md  Extreme Finishings  Extreme Finishings.md  Extreme Fittings.md  Fastwave  Integra Calibration Services  Kimberley Marine Support Base.md  NRW Civil and Mining  Overwatch Technologies Ltd.md  Overwatch-Technology.md  Primero.md  Programmed.md  SQP Engineering Pty Ltd.md  Total CAM Solutions  Total CAM Solutions.md  _template.md  a-d-coote-co-sheet-metal.md  ab-h.md  abs.md  acmecorp.md  acting-consulting-training.md  actus-associates-party.md  adarsh.md  adenco.md  adisyn.md  advanced-braking.md  adwest.md  aerospace-ndi.md  afterservice-ai.md  agili8.md  airflite.md  airobotics.md  alarp.md  alcolizer.md  alemlube.md  allied-heat-transfer.md  allship.md  alltools-wa.md  (+346 more)
content/edit/: _index.md  new.md
data/: index.yaml  taxonomies.yaml
infra/: s3-upload.yaml
layouts/: index.html  taxonomy.html  term.html
public/: styles.css
scripts/: ci_report.py  config.py  export.py  export_csv.py  import_submission.py  lint.py  preprocess.py  scrape.py  screenshot-compare.ts  stats.py  sync.py  taxonomy.py  validate_hugo_content.py
src/: content.config.ts
static/: filter-utils.js  map-embed.js  pico.slate.min.css  styles.css  template.json
submission/: submission.json
tests/: test_integration.py
(+365 files in other folders)
