[project]
name = "defencewest-scripts"
version = "0.1.0"
description = "Scripts for WA Defence Industry Directory"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "markdown-it-py>=4.0.0",
    "markdownify>=1.2.2",
    "mdformat>=1.0.0",
    "mlnative>=0.3.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pathvalidate>=3.2.1",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "selectolax>=0.4.6",
    "shapely>=2.1.2",
    "unidecode>=1.4.0",
    "validators>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
